fix: fix a validity error and add a scrollbar for the block Code

--- a/style.css
+++ b/style.css
@@ -129,12 +129,14 @@ h2 {
 }
 
 .code {
+    width: 100%;
     padding: 0 20px 15px 25px;
 }
 
 .code pre {
     background-color: #e5e5e5;
     padding: 5px;
+    overflow: scroll;
 }
 
 .footer {
